--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_gallery">Votes</string>
+    <string name="menu_slideshow">Organisations</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_username">Name</string>
@@ -66,4 +66,8 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="title_activity_create_vote">CreateVoteActivity</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="votes">Votes</string>
+    <string name="plus">Plus</string>
+    <string name="title_activity_vote">VoteActivity</string>
 </resources>
